<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity" >

    <item android:id="@+id/search" android:title="@string/searchDesc"
        android:orderInCategory="100" app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:actionViewClass="android.support.v7.widget.SearchView"    />

    <item android:id="@+id/refesh" android:title="@string/refreshDesc"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:icon="@drawable/refresh_img"    />

    <item android:id="@+id/addOrRemoveFavourites" android:title="@string/addToFavouritesDesc"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:icon="@drawable/empty_star"     />

    <item android:id="@+id/showFavourites" android:title="@string/showFavouritesDesc"
        android:orderInCategory="100" app:showAsAction="never"  />

    <item android:id="@+id/reverse" android:title="@string/reverseDesc"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:icon="@drawable/reverse_img"    />

</menu>
